fix footer spacing

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -4,6 +4,10 @@ footer {
   text-align: center;
   font-size: 0.9rem;
   margin-top: 7rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 footer li, footer h4 {
@@ -14,7 +18,7 @@ footer li, footer h4 {
 .footer__logo {
   font-size: 2rem;
   font-weight: 500;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
   display: inline-block;
 }
 
@@ -39,7 +43,7 @@ footer li, footer h4 {
   display: flex;
   justify-content: center;
   gap: 1rem;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
 }
 
 a {
@@ -52,6 +56,8 @@ a {
   padding: 0.8rem;
   border-radius: 0.7rem;
   display: flex;
+  align-items: center;
+  justify-content: center;
   border: 1px solid transparent;
 }
 
@@ -72,10 +78,21 @@ a {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 1.5rem;
-    margin: 0 1rem 2rem 1rem;
+    margin: 0 1rem 1rem 1rem;
+  }
+  
+  .footer__socials {
+    margin: 1rem;
+    gap: 1.5rem;
+    flex-wrap: wrap;
   }
 
-  .footer__socials {
-    margin-bottom: 2.6rem;
+  .footer__socials a{
+    margin: 0 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 3rem;
+    height: 3rem;
   }
 }
